# board-em-rs

./: Cargo.toml  FooBar.session.sql  foobar.db  seqdiag.txt
db/: create.sql
src/: db.rs  games.rs  main.rs  models.rs
